fancygallery z-index fix

--- a/src/sass/pages/_single-gallery.scss
+++ b/src/sass/pages/_single-gallery.scss
@@ -138,3 +138,7 @@ body.single-gallery {
     }
   }
 }
+
+.fancybox__container {
+  z-index: 9999 !important;
+}
